# acmthakyll

./: .bib  .gitignore  2014-17-reuniao-mig-trajetoria-basquete  README.md  teste.html  teste.md  tratarBib
andercamera/: .andercamera.h.kate-swp  CMakeLists.txt  andercamera.c  andercamera.h  main.c
cuda_meu_gaussiano/: CMakeLists.txt  cuda_meu_gaussiano.kdev4  main.cu
cuda_meu_gaussiano/.kdev4/: cuda_meu_gaussiano.kdev4
old/: 2012-12-05-making-my-blog.md
pages/: index.md  index.md~  projects.md  projects.md~  research.md
pdf/: .default.tex.kate-swp  2013-12-02-monography.md  2013-12-02-monography.tex  Makefile  abstracts.txt  acmt@vision  default.tex  ieee-with-url.csl  library.bib  library2.bib  library3.bib  modelo.tex  monografia.aux  monografia.glg  monografia.glo  monografia.gls  monografia.out  monografia.tex  monografia.toc  monografia.xdy
posts/: 2013-11-24-fazendo-meu-blog.md  2013-11-24-revisao-bibliografica-sistematica.md  2013-11-25-1-revisao-bibliograficao-sistematica-planejamento.md  2013-12-03-consertando-links-mendeley-bib.md  2014-02-25-webgl-introducao.md  2014-02-26-webgl-criando-triangulo.md  2014-02-27-opengl-introducao.md  2014-02-28-primeira-janela.md  2014-02-28-webgl-colorindo-triangulo.md  2014-03-01-webgl-movimentando-triangulo.md  2014-03-02-webgl-real-3d.md  2014-03-04-webgl-texture.md  2014-03-05-webgl-keyboard-filter.md  2014-03-06-webgl-directional-ambient-light.md  2014-03-07-linear-algebra.md  2014-03-07-webgl-depth-transparency.md  2014-03-08-webgl-improving-code.md  2014-03-09-webgl-loading-world-camera.md  (+9 more)
(+79 files in other folders)
